--- a/public/index.ejs
+++ b/public/index.ejs
@@ -17,7 +17,7 @@
 
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@200&display=swap" rel="stylesheet">
 
-  <link rel="stylesheet" href="./assets/css/main.css">
+  <link rel="stylesheet" href="./css/main.css">
 </head>
 <body>
   <div id="app"><%-include('../.temp/app')%></div>
