--- a/src/public/index.ejs
+++ b/src/public/index.ejs
@@ -20,7 +20,7 @@
   <link rel="stylesheet" href="./css/main.css">
 </head>
 <body>
-  <div id="app"><%-include('../.temp/app')%></div>
+  <div id="app"><%-include('../../.temp/app')%></div>
 
     <!-- CDN for Jquery -->
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
