--- a/src/assets/scss/home/_responsive.scss
+++ b/src/assets/scss/home/_responsive.scss
@@ -2,6 +2,7 @@
 
 @media screen and (max-width: 576px){ 
   .home{
+    @include background(true);
     #{&}__intro{
       .salutation{
         font-size: 2rem;
