--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -1,11 +1,9 @@
 @import './utils/main';
 @import './header';
+@import './extras';
 @import './home/main';
+@import './about/main';
+@import './projects/main';
 
-
-
-.page2{
-  margin: 0 auto;
-}
 
 
