--- a/src/assets/scss/utils/_mixin.scss
+++ b/src/assets/scss/utils/_mixin.scss
@@ -10,3 +10,25 @@
   position: absolute;
   background: $hamburger-color;
 }
+
+@mixin background($ismobile:false){
+  
+  @if $ismobile{
+    background: url('../images/background_mobile.jpg');
+  } @else {
+    background: url('../images/background.jpg');
+  }
+  background-size: cover;
+  background-position: bottom;
+}
+
+@mixin fizz{
+  transform: translate(92vw, -75px);
+  right: 100px;
+  bottom: -75px;
+  z-index: 2;
+  width: 2px;
+  height: 150px;
+  /* border: 1px solid red; */
+  background: linear-gradient(rgb(24, 204, 144), rgb(7, 87, 37));
+}
