Adding new pages and styles

--- a/src/assets/scss/_extras.scss
+++ b/src/assets/scss/_extras.scss
@@ -5,10 +5,17 @@
 .scroll-down{
   position: absolute;
   // bottom: 0;
-  transform: translate(80vw, -200px);
-  // right: 120px;
+  transform: translate(calc(90vw - 200px), -180px);
+  text-decoration: none;
   font-family: $font-main;
-  font-size: 1.1rem;
+  font-size: 1rem;
   font-weight: 900;
   color: #fff;
+  text-transform: uppercase;
+
+  &:hover, &:active{
+    color: #fff;
+    text-decoration: none;
+  }
 }
+
