--- a/src/assets/scss/about/_about.scss
+++ b/src/assets/scss/about/_about.scss
@@ -4,4 +4,5 @@
   height: 100vh;
   background: linear-gradient(rgb(24, 204, 144), rgb(11, 146, 62));
   background-attachment: local;
+  box-shadow: 1px 1px 8px black;
 }
