--- a/src/assets/scss/utils/_variable.scss
+++ b/src/assets/scss/utils/_variable.scss
@@ -1,5 +1,6 @@
 // Colors
 $skin-color: rgb(42, 185, 228);
+$background-color: rgb(61, 61, 61);
 $hamburger-color: #fff;
 
 $font-main: Montserrat, serif;
