--- a/src/assets/scss/projects/_projects.scss
+++ b/src/assets/scss/projects/_projects.scss
@@ -2,6 +2,10 @@
   // margin-top: 100vh;
   width: 100%;
   height: 100vh;
-  background: linear-gradient(rgb(42, 42, 42), rgb(11, 146, 62));
+  background: $background-color;
   background-attachment: local;
+
+  .fizz{
+    background: linear-gradient($background-color, rgba(61, 61, 61, 0));
+  }
 }
